fix: avatar alignment

--- a/src/styles/4-modules/_article.scss
+++ b/src/styles/4-modules/_article.scss
@@ -149,6 +149,10 @@
     color: $evl-turquoise;
     font-family: $font-family-sans-serif;
     font-size: 0.9rem;
+
+    p {
+      clear: none;
+    }
   
     .avatar {
       float: left;
